[package]
name = "bookish_torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.105"
serde_bencode = "0.2.4"
serde_bytes = "0.11.14"
